Hide UserVoice icon on mobile.  Fix weather icon bug on mobile in DCR create form.

--- a/public/css/bootstrap-mod.css
+++ b/public/css/bootstrap-mod.css
@@ -69,6 +69,9 @@ fieldset[disabled] .btn-link-light {
     .mobile-hide {
         display:none;
     }
+    .uv-icon {
+        display:none;
+    }
 }
 @media (max-width: 992px) {
     .tablet-hide {
